style.css
@font-face {
    font-family: Norse-Bold;
    src: url(fonts/Norse-Bold.otf);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* outline: 1px solid red; */
}

img {
    max-width: 100%;
    height: auto;
}

body {
    font-family: "Inter", sans-serif;
}

.wrapper {
    display: flex;
    min-height: 100vh;
    width: 100%;

}

a {
    color: #FFF;
}

/* LEFT SECTION OF THE PAGE */
.left-section {
    width: 50%;
    background-image: url(images/halie-west-unsplash.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    color: #FFF;
}

.banner {
    width: 100%;
    height: 120px;
    background-color: transparent;
    position: relative;
    top: 150px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.5);
}

img[src="images/odin-lined.png"] {
    width: 80px;
    height: 100px;
}
.logo-text {
    color: #FFF;
    font-size: 5rem;
    font-family: Norse-Bold;
    text-transform: uppercase;
}

.backgorund-image-credit {
    position: relative;
    top: 510px;
    left: 70px;
}

/* RIGHT SECTION OF THE PAGE */
.right-section-container {
    width: 100%;
    min-height: 100vh;
    padding-top: 115px;
}

.right-section {
    background-color: #F9FAFB;
}

.right-section__copy {
    font-weight: 550;
    font-size: 1.2rem;
    margin-left: 35px;
}

.right-section__copy.first-paragraph {
    margin-bottom: 30px;
    max-width: 70%;
}

.form-wrapper {
    margin-block: 30px;
    padding: 20px 35px;
    color: #1F2937;
    background-color: #FFFFFF;
    box-shadow: 0 1px 2.5px rgb(24, 24, 24, 0.5);
}

.form-layout {
    display: flex;
    gap: 1.3rem;
    flex-wrap: wrap;
    max-width: 700px;
}
.form-layout__control {
    display: flex;
    flex-direction: column;
    margin-right: 2.5rem;
}

legend {
    font-size: 1.1rem;
    font-weight: 700;
    margin-block: 15px;
}
label {
    font-weight: 500;
    font-size: .9rem;
    text-transform: uppercase;
}
input {
    min-height: 25px;
    width: 250px;
    border: 1px solid #E5E7EB;
    border-radius: 3px;
    outline: none;
}

input:focus {
    border: 1px solid #7C93D4;
}
input:valid:not(:placeholder-shown) {
    border-color: green;
}
input:invalid:not(:placeholder-shown) {
    border-color: red;
}


button[type="submit"], .form+p {
    margin-left: 30px;
}

button[type="submit"] {
    margin-bottom: 20px;
    padding: .7em 2.3em;
    background-color: #596D48;
    border: none;
    color: #FFFFFF;
    font-size: 1rem;
    border-radius: 5px;
    cursor: pointer;
}
button[type="submit"]:active {
    opacity: .7;
}

.form+p {
    font-weight: 450;
}
.form+p span {
    color: #596D48;
}

